# typed-lisa-toolkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cog.toml  pyproject.toml
.gitlab/: ci.yml
docs/: Makefile  _sphinx_handlers.py  conf.py  docs-requirements.txt  index.rst
docs/_templates/: class.rst  module.rst  reps_class.rst  type.rst
docs/api/: shop.rst  toplevel.rst  types.rst  utils.rst
docs/api/consumers/: index.rst  likelihood.rst  noisemodel.rst
docs/api/containers/: arithdicts.rst  data.rst  index.rst  likelihood.rst  modes.rst  noisemodel.rst  representations.rst  sensitivity.rst  series.rst  tapering.rst  waveforms.rst
docs/api/internal/: index.rst  utils.rst  viz.rst
docs/api/viz/: index.rst  plotters.rst
docs/notebooks/: sampling_GB_tutorial.ipynb
docs/userguides/: installation.rst  quickstart.rst  tutorials.rst
src/typed_lisa_toolkit/: __init__.py  _constructors.py  _loaders.py  utils.py
src/typed_lisa_toolkit/consumers/: likelihood.py  noisemodel.py
src/typed_lisa_toolkit/containers/: __init__.py  arithdicts.py  data.py  likelihood.py  modes.py  noisemodel.py  representations.py  sensitivity.py  series.py  tapering.py  waveforms.py
src/typed_lisa_toolkit/lib/: __init__.py  mixins.py  mixins.pyi
src/typed_lisa_toolkit/shop/: __init__.py  conversions.py  transforms.py
src/typed_lisa_toolkit/types/: __init__.py  _mixins.py  data.py  likelihood.py  misc.py  modes.py  noisemodel.py  representations.py  tapering.py  waveforms.py
src/typed_lisa_toolkit/viz/: data.py  plotters.py
tests/: _helpers.py  conftest.py  test_arithdicts.py  test_data.py  test_likelihood.py  test_modes.py  test_noisemodel.py  test_public_api.py  test_representations.py  test_sensitivity.py  test_series.py  test_utils.py  test_waveforms.py
tests/_shared/: data_helpers.py  noisemodel_helpers.py  representations_helpers.py  waveforms_helpers.py
tests/jax/: test_conversions.py  test_data.py  test_likelihood.py  test_noisemodel.py  test_representations.py  test_tapering.py  test_transforms.py  test_utils.py  test_waveforms.py
tests/legacy/: test_arithdicts.py  test_data.py  test_likelihood.py  test_modes.py  test_noisemodel.py  test_representations.py  test_tapering.py  test_waveforms.py
tests/numpy/: test_conversions.py  test_data.py  test_likelihood.py  test_mixins.py  test_modes.py  test_noisemodel.py  test_representations.py  test_tapering.py  test_transforms.py  test_utils.py  test_waveforms.py
