[project]
name = "typed-lisa-toolkit"
dynamic = ["version"]
authors = [{ name = "Sen-wen Deng", email = "deng@apc.in2p3.fr" }]
description = "Fully typed interfaces for LISA data analysis"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy >= 1.26.0",
    "scipy >= 1.12.0",
    "h5py",
    "array-api-compat >= 1.13.0",
    "l2d-interface @ git+https://gitlab.in2p3.fr/senwen.deng/l2d-interface.git@7b9d6994b8fec58df6eb729a5fa79022de9ea209",
]

[project.optional-dependencies]
wdm = ["wdm-transform>=0.1.1"]
jax = ["jax"]
quadax = ["quadax"]
mojito = [
    "mojito-processor @ git+https://github.com/OllieBurke/MojitoProcessor.git",
]

[dependency-groups]
jax = ["jax"]
quadax = [{ include-group = "jax" }, "quadax"]
doc = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-mermaid",
    "sphinx-inline-tabs",
    "furo",
    "fastgb @ git+https://gitlab.in2p3.fr/LISA/fastgb.git",
    "anybadge",
]
dev = [
    { include-group = "doc" },
    "ruff",
    "h5py-stubs>=0.1.2",
    # "isort>=7.0.0", # `ruff check --select I --fix .` does the trick
    # "mypy>=1.19.1", # `basedpyright` is used instead of `mypy` for type checking
    "myst-nb>=1.3.0",
    "nb-clean>=4.0.1",
    "pre-commit>=4.5.1",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "uv-dynamic-versioning>=0.12.0",
    { include-group = "quadax" },
    "basedpyright",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/typed_lisa_toolkit"]

[tool.uv-dynamic-versioning]
enable = true
style = "semver"
vcs = "git"
pattern = "default-unprefixed"

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"


[tool.ruff.lint]
select = [
    "D",
    "PL",
    "F",
    "S",
    "FBT",
    "B",
    "COM",
    "DTZ",
    "T10",
    "ISC",
    "EM",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "SLOT",
    "TID",
    "TD",
    "TC",
    "ARG",
    "PTH",
    "FLY",
    "I",
    "C90",
    "NPY",
    "PD",
    "N",
    "PERF",
    "E",
    "W",
    "PGH",
    "UP",
    "FURB",
    "RUF",
    "TRY",
]
ignore = [
    "D104",
    "PLC0415",
    "PLR0913",
    "COM812",
    "SLF001",
    "TID252",
    "TC001",
    "TC002",
    "TC003",
    "TC004",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "PL", "DOC", "INP", "S101", "N802"]
"docs/**" = ["D", "PL", "DOC", "INP", "RET504", "C901", "N806", "PERF", "E402"]

[tool.coverage.report]
omit = [
    "*/typed_lisa_toolkit/containers/modes.py",
    "*/typed_lisa_toolkit/viz/*",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.hatch.build.targets.wheel.force-include]
"src/typed_lisa_toolkit/py.typed" = "typed_lisa_toolkit/py.typed"

[tool.basedpyright]
include = ["src"]
exclude = ["**/__pycache__"]
ignore = ["tests", "docs"]
defineConstant = { DEBUG = true }
enableTypeIgnoreComments = true
reportIgnoreCommentWithoutRule = "none"
reportMissingImports = "error"
reportMissingTypeStubs = false
reportImplicitOverride = "none"
reportAny = "none"
reportExplicitAny = "none"
reportUnusedCallResult = "none"
reportDeprecated = false
reportImportCycles = false
executionEnvironments = [
    { root = "tests", reportPrivateUsage = false },
    { root = "src" },
]
